# pyzipper

./: HISTORY.rst  MANIFEST.in  README.rst  SECURITY.rst  pyproject.toml  requirements_build.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: tests.yml
pyzipper/: zipfile.py
test/: test_zipfile.py  test_zipfile2.py  test_zipfile_aes.py
test/support/: __init__.py
